--- a/css/style.css
+++ b/css/style.css
@@ -4,39 +4,24 @@ body {
 }
 
 .bombermanPj {
-	position: absolute;
-	width: 50px;
-	height: 50px;
-    top: 0;
-    left: 0;
 	background: url("./images/Bomberman-pink.png") no-repeat center center;
-	-o-background-size: 100% 100%, auto;
-	-moz-background-size: 100% 100%, auto;
-	-webkit-background-size: 100% 100%, auto;
-	background-size: 100% 100%, auto;
-    transition: all .1s ease-in-out;
-    -webkit-transition: all .1s ease-in-out; /** Chrome & Safari **/
-    -moz-transition: all .1s ease-in-out; /** Firefox **/
-    -o-transition: all .1s ease-in-out; /** Opera **/
+	top: 0;
+    left: 0;
     z-index: 1;
 }
 
 .bomb {
-	position: absolute;
-	width: 50px;
-	height: 50px;
 	background: #000 url("./images/bomb_pink.png") no-repeat center center;
-	-o-background-size: 100% 100%, auto;
-	-moz-background-size: 100% 100%, auto;
-	-webkit-background-size: 100% 100%, auto;
-	background-size: 100% 100%, auto;
 }
 
 .flame {
+	background: #000 url("./images/flame.png") no-repeat center center;
+}
+
+.image {
 	position: absolute;
 	width: 50px;
 	height: 50px;
-	background: #000 url("./images/flame.png") no-repeat center center;
 	-o-background-size: 100% 100%, auto;
 	-moz-background-size: 100% 100%, auto;
 	-webkit-background-size: 100% 100%, auto;
