--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,10 @@ body {
     z-index: 1;
 }
 
+.explode {
+	background: url("./images/explosion.gif") no-repeat center center;
+}
+
 .bomb {
 	background: #000 url("./images/bomb_pink.png") no-repeat center center;
 }
@@ -26,4 +30,63 @@ body {
 	-moz-background-size: 100% 100%, auto;
 	-webkit-background-size: 100% 100%, auto;
 	background-size: 100% 100%, auto;
+}
+
+.ng-modal-overlay {
+  	/* A dark translucent div that covers the whole screen */
+  	position:absolute;
+  	z-index:9999;
+  	top:0;
+  	left:0;
+  	width:100%;
+  	height:100%;
+  	background-color:#000000;
+  	opacity: 0.8;
+}
+.ng-modal-dialog {
+  	/* A centered div above the overlay with a box shadow. */
+  	color: black;
+  	background: #000 url("./images/game-over.png") no-repeat center center;
+  	z-index:10000;
+  	position: absolute;
+  	width: 50%; /* Default */	
+  	/* Center the dialog */
+  	top: 50%;
+  	left: 50%;
+  	transform: translate(-50%, -50%);
+  	-webkit-transform: translate(-50%, -50%);
+  	-moz-transform: translate(-50%, -50%);
+}
+.ng-modal-dialog-content {
+  	padding:10px;
+  	text-align: left;
+}
+
+.ng-modal-button {
+	position: absolute;
+	right: 50%;
+	bottom: 0;
+	width: 130px;
+	padding: 10px 20px;
+  	border-radius: 10px;
+  	border-width: 3px;
+  	color: white;
+  	font-weight: bold;
+}
+.reload-button {
+  	background: #00CC33;
+  	border-color: #009933;
+}
+.reload-button:hover {
+  	background: #66CC33;
+  	border-color: #33FF33;
+}
+.end-button {
+  	background: #CC3333;
+  	border-color: #993333;
+  	left: 52%;
+}
+.end-button:hover {
+  	background: #FF3333;
+  	border-color: #FF0033;
 }
