--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,15 @@ body {
 
 .bombermanPj {
 	background: url("./images/Bomberman-pink.png") no-repeat center center;
-	top: 50px;
-    left: 50px;
-    z-index: 1;
+  z-index: 1;
+}
+
+.enemy {
+	background: url("./images/badguy1.png") no-repeat center center;
+}
+
+.fireup {
+	background: url("./images/flame_plus.png") no-repeat center center;
 }
 
 .explode {
@@ -28,6 +34,7 @@ body {
 
 .box {
 	background: #000 url("./images/bomb_box.png") no-repeat center center;
+	z-index: 1;
 }
 
 .image {
