--- a/css/style.css
+++ b/css/style.css
@@ -5,19 +5,23 @@ body {
 
 .bombermanPj {
 	background: url("./images/Bomberman-pink.png") no-repeat center center;
-  z-index: 1;
+  	z-index: 1;
 }
 
 .enemy {
-	background: url("./images/badguy1.png") no-repeat center center;
+	background: url("./images/enemy/blue_monster.png") no-repeat center center;
+	transition: all .5s ease-in-out;
+    -webkit-transition: all .5s ease-in-out; /** Chrome & Safari **/
+    -moz-transition: all .5s ease-in-out; /** Firefox **/
+    -o-transition: all .5s ease-in-out; /** Opera **/
 }
 
 .fireup {
-	background: url("./images/flame_plus.png") no-repeat center center;
+	background: url("./images/power/flame_plus.png") no-repeat center center;
 }
 
 .bombup {
-	background: url("./images/bomb_plus.png") no-repeat center center;
+	background: url("./images/power/bomb_plus.png") no-repeat center center;
 }
 
 .explode {
@@ -33,11 +37,11 @@ body {
 }
 
 .wall {
-	background: #000 url("./images/bomb_brick.png") no-repeat center center;
+	background: #000 url("./images/map/hard_block.png") no-repeat center center;
 }
 
 .box {
-	background: #000 url("./images/bomb_box.png") no-repeat center center;
+	background: #000 url("./images/map/soft_block.png") no-repeat center center;
 	z-index: 1;
 }
 
@@ -74,10 +78,10 @@ body {
 	-moz-transform: translate(-50%, -50%);
 }
 .ng-modal-dialog-content {
-  background: url("./images/game-over.png") no-repeat center center;
-  background-size: contain;
-  width: 100%;
-  height: 95%;
+  	background: url("./images/game-over.png") no-repeat center center;
+  	background-size: contain;
+  	width: 100%;
+  	height: 95%;
 }
 
 .ng-modal-button {
@@ -86,10 +90,10 @@ body {
 	bottom: 0;
 	width: 130px;
 	padding: 10px 20px;
-  border-radius: 10px;
-  border-width: 3px;
-  color: white;
-  font-weight: bold;
+	border-radius: 10px;
+	border-width: 3px;
+	color: white;
+	font-weight: bold;
 }
 .reload-button {
 	background: #00CC33;
