--- a/css/style.css
+++ b/css/style.css
@@ -3,46 +3,134 @@ body {
 	color: white;
 }
 
+.scoreBoard {
+	margin-top: 590px;
+	font-family: monospace;
+  	font-size: large;
+  	font-weight: bold;
+  	line-height: 25px;
+}
+.scoreBoard img {
+	margin-bottom: 20px;
+}
+
+.liveHeart {	
+	height: 16px;
+	width: 16px;
+	background: url("./images/heartIcon.png") no-repeat center center;
+	background-size: cover;
+	display: inline-block;
+	margin-right: 5px;
+}
+
+.bombLimit {	
+	height: 16px;
+	width: 16px;
+	background: url("./images/bomb_pink.png") no-repeat center center;
+	background-size: cover;
+	display: inline-block;
+	margin-right: 5px;
+}
+
+.fireLength {	
+	height: 16px;
+	width: 16px;
+	background: url("./images/flame.png") no-repeat center center;
+	background-size: cover;
+	display: inline-block;
+	margin-right: 5px;
+}
+
 .bombermanPj {
 	background: url("./images/Bomberman-pink.png") no-repeat center center;
   	z-index: 1;
 }
+.explode {
+	background: url("./images/explosion.gif") no-repeat center center;
+}
+
+.flicker
+{
+  animation: fade 1s forwards;
+  -webkit-animation: fade 1s forwards;
+  -moz-animation: fade 1s forwards;
+  -o-animation: fade 1s forwards;
+  animation-iteration-count: infinite;
+  -webkit-animation-iteration-count: infinite;
+  -moz-animation-iteration-count: infinite;  
+  -o-animation-iteration-count: infinite;
+}
+
+@-o-keyframes fade
+{
+    0%   {opacity:0;}
+    50%   {opacity:1;}
+    100% {opacity:0;}
+}
+
+@keyframes fade 
+{
+    0%   {opacity:0;}
+    50%   {opacity:1;}
+    100% {opacity:0;}
+}
+
+@-webkit-keyframes fade
+{
+    0%   {opacity:0;}
+    50%   {opacity:1;}
+    100% {opacity:0;}
+}
+
+@-moz-keyframes fade 
+{
+    0%   {opacity:0;}
+    50%   {opacity:1;}
+    100% {opacity:0;}
+}
+
+.wall_1 {
+	background: #000 url("./images/map/hard_block.png") no-repeat center center;
+}
+.wall_2 {
+	background: #000 url("./images/map/hard_block_2.png") no-repeat center center;
+}
+
+.box {
+	z-index: 1;
+}
+.box_1 {
+	background: #000 url("./images/map/soft_block.png") no-repeat center center;
+}
+.box_2 {
+	background: #000 url("./images/map/soft_block_2.png") no-repeat center center;
+}
 
 .enemy {
-	background: url("./images/enemy/blue_monster.png") no-repeat center center;
 	transition: all .5s ease-in-out;
     -webkit-transition: all .5s ease-in-out; /** Chrome & Safari **/
     -moz-transition: all .5s ease-in-out; /** Firefox **/
     -o-transition: all .5s ease-in-out; /** Opera **/
 }
+.enemy_1 {
+	background: url("./images/enemy/blue_monster.png") no-repeat center center;
+}
+.enemy_2 {
+	background: url("./images/enemy/green_monster.png") no-repeat center center;
+}
 
 .fireup {
 	background: url("./images/power/flame_plus.png") no-repeat center center;
 }
-
 .bombup {
 	background: url("./images/power/bomb_plus.png") no-repeat center center;
-}
-
-.explode {
-	background: url("./images/explosion.gif") no-repeat center center;
 }
 
 .bomb {
 	background: #000 url("./images/bomb_pink.png") no-repeat center center;
 }
-
 .flame {
 	background: #000 url("./images/flame.png") no-repeat center center;
-}
-
-.wall {
-	background: #000 url("./images/map/hard_block.png") no-repeat center center;
-}
-
-.box {
-	background: #000 url("./images/map/soft_block.png") no-repeat center center;
-	z-index: 1;
 }
 
 .image {
@@ -83,7 +171,9 @@ body {
   	width: 100%;
   	height: 95%;
 }
-
+.winner {
+	background: url("./images/victory.png") no-repeat center center;
+}
 .ng-modal-button {
 	position: absolute;
 	right: 50%;
@@ -94,6 +184,16 @@ body {
 	border-width: 3px;
 	color: white;
 	font-weight: bold;
+}
+.next-button {
+	bottom: 10%;
+  	right: 41%;
+	background: #0892d0;
+	border-color: #056691;
+}
+.next-button:hover {
+	background: #2eb9f7;
+	border-color: #09a3e9;
 }
 .reload-button {
 	background: #00CC33;
